[metadata]
name = pyprompts
version = 0.0.1
author = Roy Stewart
author_email = roythomasstewart@gmail.com
description = Common generic prompts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roy-stewart/PyPrompts
project_urls =
    Bug Tracker = https://github.com/roy-stewart/PyPrompts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6